--- a/templates/memberships/membership_form.html
+++ b/templates/memberships/membership_form.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
-{% if object %}{% block title %}Editar membresía{% endblock %}{% else %}{% block title %}Nueva membresía{% endblock %}{% endif %}
+
+{% block title %}
+  {% if object %}Editar membresía{% else %}Nueva membresía{% endif %}
+{% endblock %}
+
 {% block content %}
 <h1 class="h4 mb-3">{% if object %}Editar membresía{% else %}Nueva membresía{% endif %}</h1>
+
 <form method="post" class="card">
     <div class="card-body">
         {% csrf_token %}
@@ -22,6 +27,7 @@
             </div>
         {% endfor %}
     </div>
+
     <div class="card-footer d-flex justify-content-between">
         <a class="btn btn-link" href="{% url 'memberships:list' %}">Cancelar</a>
         <button class="btn btn-primary" type="submit">Guardar</button>
